# 8-load-tracking-car

./: .gitignore  README.md  TEST_PLAN_V5.md  Target1.uvguix.chenha  Target1.uvoptx  Target1.uvprojx  build_log.txt  temp_stash_main.c
Hardware/: DHT11.c  DHT11.h  HCSR04.c  HCSR04.h  HW_I2C.c  HW_I2C.h  IOI2C.c  IOI2C.h  JY301P.c  JY301P.h  MPU6050_I2C.c  MPU6050_I2C.h  Motor.c  Motor.h  MyI2C.c  MyI2C.h  OLED.c  OLED.h  Tracking.c  Tracking.h  WitGyro.h  app_control.c  app_control.h  app_irtracking.c  app_motor.c  app_motor.h  app_stats.c  app_stats.h  app_ui.c  app_ui.h  bsp.c  bsp_buzzer.c  bsp_buzzer.h  bsp_common.h  bsp_encoder.c  bsp_encoder.h  bsp_ir_gpio.c  bsp_ir_gpio.h  bsp_key.c  bsp_key.h  (+19 more)
Listings/: Target1.map  startup_stm32f10x_hd.lst  startup_stm32f10x_md.lst
Objects/: Target1.axf  Target1.build_log.htm  Target1.htm  Target1.lnp  Target1_Target 1.dep  app_control.crf  app_control.d  app_control_v2.crf  app_control_v2.d  app_irtracking.crf  app_irtracking.d  app_irtracking_1.d  app_motor.crf  app_motor.d  app_stats.crf  app_stats.d  app_ui.crf  app_ui.d  app_usart.crf  app_usart.d  app_usart_1.d  (+114 more)
softwork/nuedc-2024-H-master/: .ccsproject  .cproject  CMakeLists.txt  empty.c  empty.syscfg
softwork/nuedc-2024-H-master/lib/: Delay.c  Delay.h  Encoder.c  Encoder.h  I2C.c  I2C.h  IR.c  IR.h  MPU6050.c  MPU6050.h  Motor.c  Motor.h  OLED.c  OLED.h  OLED_Font.h  PID.c  PID.h  Servo.c  Servo.h  Sonic.c  Sonic.h  UI.c  UI.h  Uart.c  Uart.h  beep.c  beep.h  counter.c  counter.h  extern.h  ssd1306.c  ssd1306.h  ssd1306_conf.h  switch.c  switch.h  tasks.c  tasks.h
(+333 files in other folders)
